--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,39 @@ version: '3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
   db:
     image: postgres:13
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
+    container_name: db
+
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
+      - media:/app/media
+    container_name: kittygram_backend
+
+    
   frontend:
     env_file: .env
     build: ./frontend/
-    command: cp -r /app/build/. /static/
+    command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/static
+      - static:/frontend_static
+    container_name: kittygram_frontend
+
   gateway:
     build: ./nginx/
     env_file: .env
     ports:
       - 9000:80
     volumes:
-      - static:/static
+      - static:/app/static/
+      - media:/app/media/
+    
