--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -38,7 +38,7 @@ services:
     image: dara23213/kittygram_gateway
     env_file: .env
     volumes:
-      - static_volume:/app/static
+      - static_volume:/static
       - media_volume:/app/media
     ports:
       - 9000:80
