--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ server {
   }
   location / {
     proxy_set_header Host $http_host; 
-    alias /app/static/;
+    alias /static/;
     index index.html;
   }
 }
