--- a/.env.example
+++ b/.env.example
@@ -6,33 +6,6 @@ DB_NAME=kittygram
 
 DB_HOST=db
 
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
-POSTGRES_DB=kittygram
-DB_NAME=kittygram
-
-
-DB_HOST=db
-
-
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
-POSTGRES_DB=kittygram
-DB_NAME=kittygram
-
-
-DB_HOST=db
-
-
-=======
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
-POSTGRES_DB=kittygram
-DB_NAME=kittygram
-
-
-DB_HOST=db
-
-
->>>>>>> 9c9bba8a2d597b4cae9fdfad861b59f7d6db2fe4
-DB_PORT=5432
+SECRET_KEY=YOUR_SECRET_KEY
+DEBUG=False
+ALLOWED_HOSTS=YOUR_ALLOWED_HOSTS
