--- a/setup.cfg
+++ b/setup.cfg
@@ -26,12 +26,5 @@ skip_glob =
     venv*,
     .*
 default_section = THIRDPARTY
-known_starlite = starlite
-known_first_party = hackathon
-sections =
-    FUTURE,
-    STDLIB,
-    THIRDPARTY,
-    STARLITE,
-    FIRSTPARTY,
-    LOCALFOLDER
+known_django = django
+known_first_party = kittygram_final
