--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.9
 
+
+ENV DJANGO_SETTINGS_MODULE=kittygram_backend.settings.production
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -7,5 +10,9 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+
+RUN python manage.py migrate
+RUN python manage.py collectstatic --noinput
 
 CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"]
