--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,3 +13,4 @@ RUN chmod +x /backend/entrypoint.sh
 
 ENTRYPOINT ["/backend/entrypoint.sh"]
 
+CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"] 
