--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-RUN chmod +x /app/entrypoint.sh
+# Устанавливаем права на выполнение для entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"]
+# Указываем entrypoint
+ENTRYPOINT ["/entrypoint.sh"]
