--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,21 @@
-FROM python:3.9
+FROM python:3.9 
 
-WORKDIR /app
 
-COPY requirements.txt .
+WORKDIR /app 
 
-RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY requirements.txt . 
 
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
 
-ENTRYPOINT ["/entrypoint.sh"]
+RUN pip install --no-cache-dir -r requirements.txt 
+ 
+
+COPY . . 
+
+ 
+RUN python manage.py migrate 
+
+RUN python manage.py collectstatic --noinput 
+
+
+CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi"]
